--- a/css/styles.css
+++ b/css/styles.css
@@ -603,12 +603,28 @@ h2 {
     visibility: hidden;
   }
   .anim-typewriter {
-    font-size: 35px;
+    font-size: 25px;
     width: auto;
   }
   .anim-typewriter-2 {
-    font-size: 25px;
+    font-size: 20px;
     width: auto;
+    top: 40%;
+  }
+  .intro-blcok {
+    width: 100%;
+    height: auto;
+    margin: auto;
+    margin-top: 60px;
+  }
+  .h2Container {
+    padding:0;
+    margin:0;
+    width: 20%;
+    overflow-x: visible;
+  }
+  .h2TextBlock {
+    font-size: 25px;
   }
 
 
