--- a/css/stylesAbout.css
+++ b/css/stylesAbout.css
@@ -9,12 +9,15 @@
   margin: 0;
 }
 .topBtm-block {
-  height: auto;
   width: 100%;
   margin: auto;
-  position: relative;
+  height: 750px;
 }
 
+.middle-block {
+  height: 300px;
+  background-color: #222222;
+}
 /*CONTENT*/
 
 .info-1 .info-2 .info-3 .info-4 .info-5 {
@@ -25,28 +28,21 @@
 
   span { font-size: 2.2rem; }
 }
-.product-info {
-  margin-top: -40px;
-  position: relative;
-  bottom: 6vh;
-}
 .info-outer-container {
   position: relative;
-  height: fit-content;
+  min-height: 80vh;
   width: 100%;
-  background-color: #eef4ed;
-  border-radius: 21px;
+  background: #222222;
 }
 .info-1 {
-  padding: 50px;
+  padding: 100px;
+
 }
 .info-container {
-  height: 100%;
   padding: 50px;
   width: 50%;
   float: left;
   position: relative;
-  padding-bottom: 100px;
 }
 .info-background {
   padding: 50px;
@@ -56,49 +52,18 @@
   min-height: 400px;
 }
 .info-background-2 {
-
   padding: 50px;
   border-radius: 21px;
   text-align: center;
   color: white;
-  background-color: #eef4ed;
-  min-height: 60vh;
+  background-color: #ff5c6e;
+  min-height: 400px;
 }
 .info-outer-container-2 {
   position: relative;
   min-height: 80vh;
   width: 100%;
   background: #7a7a7a;
-}
-.product-image {
-  height: 400px;
-  width: auto;
-  border-radius: 21px;
-  margin: auto;
-  display: block;
-}
-
-.h2Container {
-  padding:0;
-  margin:0;
-  overflow-x: visible;
-  margin: auto;
-  padding-top: 0;
-}
-.h2TextContainer {
-  width: 100%;
-}
-
-.h2TextBlock {
-  font-size: 25px;
-  margin: auto;
-  width: 60%;
-}
-.h2TextBlock:hover {
-
-  font-size: 20px;
-  margin: auto;
-  width: 50%;
 }
 
 
@@ -283,62 +248,6 @@
 }
 
 /* FOOTER END */
-
-.navbarContainer {
-  position: fixed;
-  width: 100%;
-  top: 10px;
-  z-index: 2;
-  padding-top: 0;
-  padding-bottom: 15px;
-  margin-top: -10px;
-}
-.menuBtn {
-  position: relative;
-  top: 50px;
-  left: 50px;
-  width: 30px;
-  height: 50px;
-  cursor: pointer;
-}
-.menuLine1 {
-  display: block;
-  max-width: 30px;
-  height: 2px;
-  margin: 3px 0;
-  background-color: #ff5c6e;
-  -webkit-align-self: flex-start;
-  -ms-flex-item-align: start;
-  align-self: flex-start;
-  -webkit-transition: .3s ease;
-  transition: .3s ease;
-}
-.menuLine2 {
-  display: block;
-  max-width: 30px;
-  height: 2px;
-  margin: 3px 0;
-  background-color: #ff5c6e;
-  -webkit-align-self: flex-start;
-  -ms-flex-item-align: start;
-  align-self: flex-start;
-  -webkit-transition: .3s ease;
-  transition: .3s ease;
-}
-.siteLogo {
-  float: right;
-
-}
-.logo {
-  top: 50px;
-  right: 30px;
-  width: 320px;
-  height: 74px;
-}
-.siteLogo:hover {
-  opacity: 0.6;
-  transition: 0.1s ease;
-}
 
 /*
  * Extra utilities
