--- a/css/stylesResponsiveProducts.css
+++ b/css/stylesResponsiveProducts.css
@@ -1,7 +1,23 @@
+@media only screen and (min-width:1280px) {
+  /* desktop*/
+  .info-outer-container {
+    width: 70%;
+  }
+
+
+}
+
 @media only screen and (max-width:1280px) {
   /* Laptop */
   .top-block {
     height: 1250px;
+  }
+
+  .info-outer-container {
+    width: 100%;
+  }
+  .product-info {
+    margin-top: 20px;
   }
 
 
@@ -40,7 +56,9 @@
 }
 
 @media only screen and (max-width:590px) {
-
+  * {
+    background-color: #222222;
+  }
   .top-block {
     height: 1700px;
     margin: 0;
