--- a/css/stylesAbout.css
+++ b/css/stylesAbout.css
@@ -69,7 +69,7 @@
 }
 .info-outer-container-2 {
   position: relative;
-  height: 800px;
+  /* height: 800px; */
   width: 100%;
   background: #7a7a7a;
 }
